--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Adam Ryu.</p>
-                                <p class="text-muted">I love to learn, challenge, and lead.</p>
+                                <p class="text-muted">Car enthusiast, music listener, gym-goer, and much more.<br>I love to learn, challenge, and lead.  </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
+                                    <a class="text-gradient" href="https://mail.google.com/mail/u/0/?fs=1&to=adavidryu@gmail.com&su=SUBJECT&body=BODY&tf=cm"><i class="bi bi-envelope-fill"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/adamryu/"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a class="text-gradient" href="https://github.com/adavidryu"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
         <footer class="bg-white py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div>
+                    <div class="col-auto"><div class="small m-0">Copyright &copy; adamryu.com</div></div>
                     <div class="col-auto">
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
