Update all pages
Added more information and cleaned up unnecessary features

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -183,7 +182,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is Adam Ryu.</p>
-                                <p class="text-muted">Car enthusiast, music listener, gym-goer, and much more.<br>I love to learn, challenge, and lead.  </p>
+                                <p class="text-muted">Car enthusiast, foodie, volleyballer, and much more.<br>I love to learn, challenge, and lead.  </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://mail.google.com/mail/u/0/?fs=1&to=adavidryu@gmail.com&su=SUBJECT&body=BODY&tf=cm"><i class="bi bi-envelope-fill"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/adamryu/"><i class="bi bi-linkedin"></i></a>
@@ -204,8 +203,6 @@
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
                     </div>
                 </div>
             </div>
