--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,6 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
                             <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -64,7 +63,7 @@
                                                 <div class="small text-muted">Houston, TX</div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-8"><div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro fuga.</div></div>
+                                        <div class="col-lg-8"><div>Software engineering program with Headstarter AI. 5 AI-based projects will be built with a final project achieving 1000 registered users or $1000 in revenue. Challenging myself with innovative projects, extensive networking, and using feedback to improve my skills and career candidacy.</div></div>
                                     </div>
                                 </div>
                             </div>
@@ -166,8 +165,6 @@
                         <a class="small" href="#!">Privacy</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a>
                     </div>
                 </div>
             </div>
